<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/operando1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_weight="1"
        android:hint="@string/Op1_DefaultValue"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="178dp"
        android:layout_height="85dp"
        android:text="@string/ResultPreText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operando1" />


    <ImageButton
        android:contentDescription="@string/sumButtonDescription"
        android:id="@+id/plusButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="450dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plussign" />

    <ImageButton
        android:id="@+id/result"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="328dp"
        android:background="@null"
        android:contentDescription="@string/sumButtonDescription"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/equal_sign" />

    <ImageButton
        android:contentDescription="@string/MultButtonDescription"
        android:id="@+id/multiplyButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minusButton"
        app:srcCompat="@drawable/multiply_sign" />

    <ImageButton
        android:contentDescription="@string/DivisionButtonDescription"
        android:id="@+id/divisionButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plusButton"
        app:srcCompat="@drawable/division_sign" />

    <ImageButton
        android:contentDescription="@string/MinusButtonDescription"
        android:id="@+id/minusButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="60dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/plusButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/minussign" />

</androidx.constraintlayout.widget.ConstraintLayout>